need to add some loader

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -55,6 +55,11 @@
           class="nav-link text-white hover:text-gray-400 font-medium transition-colors duration-200"
           >About</a
         >
+<a
+          href="/blog"
+          class="nav-link text-white hover:text-gray-400 font-medium transition-colors duration-200"
+          >Blog</a
+        >
 
         <!-- Products Dropdown -->
         <div class="relative dropdown-parent group">
@@ -92,7 +97,7 @@
                     class="product-image-container overflow-hidden rounded-lg mb-3 mx-auto w-20 h-20 lg:w-28 lg:h-28 bg-gradient-to-br from-gray-50 to-gray-100"
                   >
                     <img
-                      src="/public/images/wifi-free/BC2.png"
+                      src="/images/wifi-free/BC2.png"
                       alt="Wire-Free Cameras"
                       class="product-image w-full h-full object-cover transition-transform duration-500 group-hover/item:scale-125"
                     />
@@ -118,7 +123,7 @@
                     class="product-image-container overflow-hidden rounded-lg mb-3 mx-auto w-20 h-20 lg:w-28 lg:h-28 bg-gradient-to-br from-gray-50 to-gray-100"
                   >
                     <img
-                      src="/public/images/outdoor-wifi/LC1C.png"
+                      src="/images/outdoor-wifi/LC1C.png"
                       alt="Outdoor Wi-Fi Cameras"
                       class="product-image w-full h-full object-cover transition-transform duration-500 group-hover/item:scale-125"
                     />
@@ -144,7 +149,7 @@
                     class="product-image-container overflow-hidden rounded-lg mb-3 mx-auto w-20 h-20 lg:w-28 lg:h-28 bg-gradient-to-br from-gray-50 to-gray-100"
                   >
                     <img
-                      src="/public/images//indoor-wifi/C1C-B.png"
+                      src="/images//indoor-wifi/C1C-B.png"
                       alt="Indoor Wi-Fi Cameras"
                       class="product-image w-full h-full object-cover transition-transform duration-500 group-hover/item:scale-125"
                     />
@@ -280,6 +285,11 @@
           href="/aboutus"
           class="mobile-nav-link text-white hover:text-cyan-300 font-medium block py-2 px-2"
           >About</a
+        >
+         <a
+          href="/blog"
+          class="mobile-nav-link text-white hover:text-cyan-300 font-medium block py-2 px-2"
+          >Blog</a
         >
 
         <!-- Mobile Products Dropdown -->
