--- a/src/pages/aboutus.astro
+++ b/src/pages/aboutus.astro
@@ -270,7 +270,7 @@ import "../styles/global.css";
            
               <!-- Replace the src below with your actual image path -->
               <img 
-                src="/public/images/Banner/About Us.jpg" 
+                src="/images/Ezvismallbanner.png" 
                 alt="EZVIZ Security Solutions" 
                 class="object-cover w-full h-full rounded-2xl"
               />
