--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Hero from "../components/Hero.astro";
 import Details from "../components/Details.astro";
 import Ezviz from "../components/Ezviz.astro";
 import Products from "../components/Products.astro";
+//import Whatsapp from "../components/Whatsapp.astro";
 ---
 
 <Layout>
@@ -12,4 +13,5 @@ import Products from "../components/Products.astro";
   <Products />
   <Details />
   <Ezviz />
+
 </Layout>
