--- a/src/pages/product/index.astro
+++ b/src/pages/product/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import "../../styles/global.css";
+import Whatsapp from "../../components/Whatsapp";
 
 const title = "Product Categories | Surveillance Solutions";
 const description =
@@ -659,6 +660,7 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
     </div>
+     <Whatsapp client:load />
   </section>
 </Layout>
 
