--- a/src/pages/categories/indoorcamera.astro
+++ b/src/pages/categories/indoorcamera.astro
@@ -2,6 +2,7 @@
 import Layout from "../../layouts/Layout.astro";
 import { getCollection } from 'astro:content';
 import "../../styles/global.css";
+import Whatsapp from "../../components/Whatsapp";
 
 const products = await getCollection('indoor-wifi');
 ---
@@ -790,6 +791,7 @@ const products = await getCollection('indoor-wifi');
                 </button>
             </div>
         </div>
+         <Whatsapp client:load />
     </section>
 
     <script is:inline>
