--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import "../styles/global.css";
+import Whatsapp from "../components/Whatsapp";
 ---
 
 <style is:global>
@@ -524,6 +525,7 @@ import "../styles/global.css";
     <!-- Call to Action -->
 
   </main>
+    <Whatsapp client:load />
 </Layout>
 
 <script>
