--- a/src/pages/outdoor-wifi/[...slug].astro
+++ b/src/pages/outdoor-wifi/[...slug].astro
@@ -3,6 +3,7 @@
 import Layout from "../../layouts/Layout.astro";
 import "../../styles/global.css";
 import { getCollection } from "astro:content";
+import Whatsapp from "../../components/Whatsapp";
 
 // Generate static paths for each product
 export async function getStaticPaths() {
