--- a/src/pages/outdoor-wifi/[...slug].astro
+++ b/src/pages/outdoor-wifi/[...slug].astro
@@ -22,6 +22,7 @@ const { data, body } = product;
 const pageTitle = `${data.title} | Wire-Free Security Cameras`;
 const pageDescription = data.description;
 ---
+ <Whatsapp client:load />  
 <style is:global>
   /* Scroll Reveal Animations - Updated timing */
   [data-scroll] {
