--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -46,16 +46,16 @@ const { title, description, structuredData, keywords } = Astro.props;
         optional: {
           description:
             description ??
-            "Ezviz Dubai is an authorized distributor of UNV products in Dubai, UAE",
-          siteName: "unv distributor in Dubai",
+            "Ezviz Dubai is an authorized distributor of Ezviz products in Dubai, UAE",
+          siteName: "Ezviz distributor in Dubai",
           locale: "en_Us",
         },
       }}
       twitter={{
         card: "summary_large_image",
-        creator: "@unvdubai",
-        site: "@Unvdubai",
-        title: title ?? "UNV Authorized distributor in Dubai,U.A.E",
+        creator: "@ezvizdubai",
+        site: "@ezvizdubai",
+        title: title ?? "Ezviz Authorized distributor in Dubai,U.A.E",
         image: "",
         imageAlt: "Ezviz Dubai",
         description:
@@ -83,7 +83,7 @@ const { title, description, structuredData, keywords } = Astro.props;
               logo: "",
               description:
                 description ??
-                "Ezviz Dubai is an authorized distributor of UNV products in Dubai, UAE.",
+                "Ezviz Dubai is an authorized distributor of Ezviz products in Dubai, UAE.",
               address: {
                 "@type": "PostalAddress",
                 streetAddress: "Market, Naif, Deira",
