--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -20,9 +20,44 @@ const formatDate = (date: Date) => {
 };
 
 // SEO meta data
-const title = "UNV Dubai Blogs | Professional Security Insights & Industry Expertise";
-const description = "Stay informed with the latest insights on surveillance technology, CCTV innovations, and security solutions from UNV Dubai's industry experts.";
+const title = "Ezviz Dubai Blogs | Ezviz Camera Dubai Insights";
+const description = "Explore our latest blog posts on surveillance technology, CCTV trends, and security solutions from Ezviz Dubai in Dubai.";
 const canonicalUrl = new URL("/blog", Astro.site);
+
+
+// JSON-LD Structured Data
+const structuredData = {
+  "@context": "https://schema.org",
+  "@type": "Blog",
+  "name": title,
+  "description": description,
+  "url": canonicalUrl.toString(),
+  "inLanguage": "en-US",
+  "isPartOf": {
+    "@type": "WebSite",
+    "url": Astro.site
+  },
+  "blogPosts": posts.map(post => ({
+    "@type": "BlogPosting",
+    "headline": post.data.title,
+    "description": post.data.description || description,
+    "url": `${Astro.site}/blog/${post.slug}`,
+    "image": `${Astro.site}${post.data.cardImage.src}`,
+    "datePublished": post.data.pubDate,
+    "author": {
+      "@type": "Person",
+      "name": post.data.author || "Ezviz Dubai"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "Ezviz Dubai",
+      "logo": {
+        "@type": "ImageObject",
+        "url": `${Astro.site}/images/unvdubai.png` // Update with your logo path
+      }
+    }
+  }))
+};
 ---
 
 <Layout
